--- a/exam/02/02-1/index.html
+++ b/exam/02/02-1/index.html
@@ -12,7 +12,7 @@
       new Vue({
         el: '#app',
         data: {
-          message: 'Hello Vue.js!'
+          message: 'Hello danVue.js!'
         }
       });
     </script>
